--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
   text-align: center;
   background-color: grey;
   color: white;
@@ -6,9 +6,9 @@ h1 {
   margin: 8px 0;
   border: none;
   border-radius: 4px;
-}
+} */
 
-.container{
+/*.container{
   text-align: center;
 }
 
@@ -37,11 +37,11 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 200;
   color: brown;
-}
+}*/
 
-div {
+/* div {
   padding: 20px;
-}
+} 
 
 button{
   border: none;
@@ -66,6 +66,7 @@ button{
   right: 5px;
   color: red;
 }
+
 
 input[type=text], input[type=date]{
   width: 100%;
@@ -94,4 +95,4 @@ input[type=submit]:hover {
 
 form {
   text-align: left;
-}
+}*/
